practice/12_block/syntax.txt
program:
program: stmt program
stmt: "{" block_items "}"
stmt: control
stmt: assign ";"
stmt: return assign ";"
block_items: stmt
block_items: stmt block_items
control: "if" "(" assign ")" stmt
control: "while" "(" assign ")" stmt
control: "for" "(" assign ";" assign ";" assign ")" stmt
assign: equality
assign: equality "=" assign
equality: relational
equality: equality "==" relational
equality: equality "!=" relational
relational: add
relational: relational "<"  add
relational: relational "<=" add
relational: relational ">"  add
relational: relational ">=" add
add: mul
add: add "+" mul
add: add "-" mul
mul: unary
mul: mul "*" unary
mul: mul "/" unary
unary: "+" term
unary: "+" term
unary: term
term: num
term: ident
term: "(" assign ")"


program:
program: stmt program
stmt: "{" block_items "}"
stmt: control
stmt: assign ";"
stmt: return assign ";"
block_items: stmt
block_items: stmt block_items
control: "if" "(" assign ")" stmt
control: "while" "(" assign ")" stmt
control: "for" "(" assign ";" assign ";" assign ")" stmt
assign: equality
assign: equality "=" assign
equality: relational equalityx
equalityx:
equalityx: "==" relational equalityx
equalityx: "!=" relational equalityx
relational: add relationalx
relationalx: "<"  add relationalx
relationalx: "<=" add relationalx
relationalx: ">"  add relationalx
relationalx: ">=" add relationalx
add: mul addx
addx:
addx: "+" mul addx
addx: "-" mul addx
mul: unary mulx
mulx:
mulx: "*" unary mulx
mulx: "/" unary mulx
unary: "+" term
unary: "+" term
unary: term
term: num
term: ident
term: "(" assign ")"
